--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
         </div>
         <div class="nav">
             <ul>
-                <li><a href="#"></a>header link one</li>
-                <li><a href="#"></a>header link two</li>
-                <li><a href="#"></a>header link three</li>
+                <li><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank">header link one</a></li>
+                <li><a href="#">header link two</a></li>
+                <li><a href="#">header link three</a></li>
             </ul>
         </div>
     </div>
