Added another useless section

--- a/index.html
+++ b/index.html
@@ -100,6 +100,26 @@
             </div>
         </div>
     </div>
+    <!--Fifth section-->
+    <div class="fifth-section">
+        <div class="fifth-section-holder">
+            <div class="s-var">
+                <div class="circles-box">
+                    <div class="circles c1"></div>
+                    <div class="circles c2"></div>
+                    <div class="circles c3"></div>
+                </div>
+                <div class="search">Search</div>
+            </div>
+            <div class="grid-container">
+                <div class="grid-container-child one"></div>
+                <div class="grid-container-child two"></div>
+                <div class="grid-container-child three"></div>
+                <div class="grid-container-child four"></div>
+                <div class="grid-container-child five"></div>
+            </div>
+        </div>
+    </div>
     <!--FOoter-->
     <footer id="footer">
         wheatSrub11 for The Odin Project 2021
