Added a background behind the main section

--- a/index.html
+++ b/index.html
@@ -23,6 +23,23 @@
     </div>
     <!--Main Section-->
     <div id="main-section">
+        <!--The main section background-->
+        <div class="main-section-bg">
+            <div class="box-grid-bg one"></div>
+            <div class="box-grid-bg two"></div>
+            <div class="box-grid-bg three"></div>
+            <div class="box-grid-bg four"></div>
+            <div class="box-grid-bg five"></div>
+            <div class="box-grid-bg six"></div>
+            <div class="box-grid-bg seven"></div>
+            <div class="box-grid-bg eight"></div>
+            <div class="box-grid-bg nine"></div>
+            <div class="box-grid-bg ten"></div>
+            <div class="box-grid-bg eleven"></div>
+            <div class="box-grid-bg twelve"></div>
+            <div class="box-grid-bg thirteen"></div>
+        </div>
+        <!--The actually content of the main section-->
         <div class="left-box">
             <div class="main-title">
                 <h1>The sky view is awesome</h1>
