Added two grid bg

--- a/index.html
+++ b/index.html
@@ -119,6 +119,24 @@
     </div>
     <!--Fifth section-->
     <div class="fifth-section">
+        <!--Section n6 (bg)--> 
+        <div class="section-n6-holder">
+            <div class="section-n6">
+                <div class="s-n6 box1"></div>
+                <div class="s-n6 box2"></div>
+                <div class="s-n6 box3"></div>
+                <div class="s-n6 box4"></div>
+                <div class="s-n6 box5"></div>
+                <div class="s-n6 box6"></div>
+                <div class="s-n6 box7"></div>
+                <div class="s-n6 box8"></div>
+                <div class="s-n6 box9"></div>
+                <div class="s-n6 box10"></div>
+                <div class="s-n6 box11"></div>
+                <div class="s-n6 box12"></div>
+            </div>
+        </div>
+
         <div class="fifth-section-holder">
             <div class="s-var">
                 <div class="circles-box">
@@ -137,6 +155,8 @@
             </div>
         </div>
     </div>
+    <!--Section n6-->
+
     <!--FOoter-->
     <footer id="footer">
         wheatSrub11 for The Odin Project 2021
